@@ -547,7 +547,7 @@ DECL_TEMPLATE(darwin, getattrlistbulk);          // 461
 // NYI fstatat64       // 470
 // NYI linkat          // 471
 // NYI unlinkat        // 472
-// NYI readlinkat      // 473
+DECL_TEMPLATE(darwin, readlinkat);               // 473
 // NYI symlinkat       // 474
 // NYI mkdirat         // 475
 // NYI getattrlistat   // 476
